# yolo_ffi

./: .clang-format  LICENSE  README.md  ffigen.yaml  opencv_objs.py  prepare_framework.sh  pubspec.yaml
.github/: FUNDING.yml
android/: build.gradle  consumer-rules.pro
android/src/main/kotlin/com/cia1099/yolo_ffi/: YoloFfiPlugin.kt
example/: pubspec.yaml
example/android/app/: build.gradle.kts
example/lib/: detect_page.dart  dev_page.dart  main.dart  painters.dart  yuv2rgba_converter.dart
ios/: yolo_ffi.podspec
ios/Classes/: YoloFfiPlugin.h  YoloFfiPlugin.m  YoloFfiPlugin.swift  print.h  yolo_ffi.h
lib/: ort_yolo_ffi.dart  yolo_ffi.dart
lib/src/: bridge_ffi.dart  isolate_yolo.dart  yolo_ffi_bindings_generated.dart  yolo_model.dart
src/: CMakeLists.txt  coreml_ffi.mm  coreml_yolo.h  coreml_yolo.mm  ncnn_ffi.cpp  ncnn_yolo.cpp  ncnn_yolo.h  onnx_ffi.cpp  onnx_yolo.cpp  onnx_yolo.h  print.cpp  yolo_ffi.c  yolo_ffi.cpp  yolo_ffi.h  yolo_onnx.cpp  yolo_onnx.h
src/cmake/: yolo_ffiConfig.cmake.in
